tests/fixtures/functional_patterns/negative/n20_vec_extend.rs
fn flatten_imperative(nested: Vec<Vec<i32>>) -> Vec<i32> {
    let mut result = Vec::new();
    for vec in nested {
        for item in vec {
            result.push(item);
        }
    }
    result
}
